# supattrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
samplemacros/: Cargo.toml
samplemacros/src/: lib.rs
samplemacros/tests/: test_sanity.rs
src/: lib.rs  transform.rs  visit.rs  visitable.rs  visitor.rs
tests/: test_sanity.rs
