[package]
name = "supattrs"
version = "0.1.0"
licence = "MIT OR Apache-2.0"
authors = ["Jim Fasarakis-Hilliard <d.f.hilliard@gmail.com>"]
edition = "2018"
readme = 'README.md'
repository = 'https://github.com/DimitrisJim/supattrs'
description = ""
documentation = "https://docs.rs/supattrs"
publish = false

# Cargo.toml with [package] and [workspace] is considered root package.
# Just add members here, see samplemacros/Cargo.toml for more.
[workspace]
members = ["samplemacros"]

[dependencies]
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ['full']
