[package]
name = "samplemacros"
version = "0.1.0"
authors = ["Jim Fasarakis-Hilliard <d.f.hilliard@gmail.com>"]
edition = "2018"
# No need to specify it since it's trivial
# workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

# Need to specify supattrs (i.e "..") as a dependency. Too bad ".." isn't specified anywhere
# in the docs as the way to do this (also not assumed as for package.workspace
# Note: Appears necesary to specify dependencies, even if they match root package's ones.
[dependencies]
supattrs = {path = ".."}
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ['full']
